[tool.poetry]
name = "acvtool"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
six = "1.11.0"
Chameleon = "3.1"
PyYAML = "3.12"
lxml = "^4.8.0"
javaobj-py3 = "^0.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
